footer components, update from ocha_basic, mainly to remove border bottom and replace with underlines on links, and alignment fixes

--- a/sass/cd/cd-footer/_cd-footer-menu.scss
+++ b/sass/cd/cd-footer/_cd-footer-menu.scss
@@ -29,12 +29,7 @@
 // Drupal selectors
 //——————————————————————————————————————————————————————————————————————————————
 
-// Apply menu  styles to Drupal Menu items
-.menu--footer .menu {
-  @extend .cd-footer-menu;
-}
-
 // Apply menu item styles to Drupal Menu items
-.menu--footer .menu > li {
+.cd-footer-menu > li {
   @extend .cd-footer-menu__item;
 }
